--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ data/extra.mp4
 data/playthrough.mov
 data/TVnoise.mp4
 data/TVnoise2.mov
+Assets/StreamingAssets/Prude_1.ogv
+Assets/StreamingAssets/Prude_1.ogv.meta
+Assets/StreamingAssets/sex1.ogv
+Assets/StreamingAssets/sex1.ogv.meta
+Assets/StreamingAssets/TVnoise2.ogv
+Assets/StreamingAssets/TVnoise2.ogv.meta
